Fix various styles on mobile

--- a/examples/solidjs-live-avatars/src/App.module.css
+++ b/examples/solidjs-live-avatars/src/App.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;;
+  justify-content: center;
 }
 
 .more {
