--- a/examples/solidjs-live-cursors/src/App.module.css
+++ b/examples/solidjs-live-cursors/src/App.module.css
@@ -3,5 +3,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;;
+  justify-content: center;
+  text-align: center;
+}
+
+.Text {
+  margin: 0 16px;
 }
