--- a/examples/vuejs-live-cursors/public/styles.css
+++ b/examples/vuejs-live-cursors/public/styles.css
@@ -22,6 +22,7 @@ body {
 
 .text {
   max-width: 380px;
+  margin: 0 16px;
   text-align: center;
 }
 
